# notion_blog_generator

./: .gitignore  Makefile  README.md  convert_export.py  find_unicode_and_add_custom_font.py  nginx_redirects.txt  pyproject.toml  requirements.txt  scripts.js  twitter_script.js  uuid_diff_to_nginx_redirects.py
.github/workflows/: python-app.yml
docs/: architecture.dot
lib/: __init__.py  _page.py  _shared_resources.py  create_abstract_tree.py  page.py  settings.py  shared_resources.py  thumb_cache.py
lib/_old_transformers/: __init__.py  add_analytics_tag.py  add_atom_feed.py  add_favicon.py  add_file_icons.py  add_patreon_button.py  add_scripts_and_buttons.py  add_sidebar.py  add_twitter_card.py  generate_thumbnails.py  remove_inlined_style.py
lib/html_transformers/: __init__.py  add_analytics_tag.py  add_analytics_tags.py  add_atom_feed.py  add_atom_feed_tags.py  add_backlinks.py  add_breadcrumbs.py  add_favicon_link.py  add_favicon_links.py  add_file_icons.py  add_google_tags.py  add_image_links.py  add_keywords.py  add_last_five_sidebars.py  add_meta_tags.py  add_patreon_button.py  add_patreon_buttons.py  add_scripts_and_buttons.py  add_scripts_and_twitter_buttons.py  add_sections_to_sidebars.py  add_sidebars.py  add_syntax_highlighting.py  add_twitter_card.py  add_twitter_cards.py  fix_blockquotes.py  fix_checkboxes.py  fix_file_uploads.py  (+19 more)
static_files/: ads.txt  custom_style.css  scripts.js  style.css
tests/: critique_stub.html  test_create_abstract_tree.py  test_load_metadata.py  test_unfuck_filenames.py  test_virtual_fs.py  test_youtube_parser.py
(+123 files in other folders)
