[project]
name = "notion-blog-generator"
version = "0.1.0"
description = "Personal blog generator from Notion exports"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dateparser>=1.4.0",
    "dhtmlparser3>=3.0.17",
    "feedgen~=0.9.0",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "pygments>=2.20.0",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "sh>=2.2.2",
    "tqdm>=4.67.3",
    "tzlocal>=5.3.1",
]

[project.scripts]
notion-blog-generator = "notion_blog_generator.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[[project.authors]]
name = "Bystroushaak"
email = "bystrousak@kitakitsune.org"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_blog_generator"]
